remove useless codes and refactor the testcase